@@ -62,4 +62,8 @@ configure(subprojects - project(":annotations")){
             options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
         }
     }
+
+    tasks.withType(JavaExec){
+        jvmArgs += "--enable-preview"
+    }
 }
